# claude_code_apps

./: jw_Introduction to Claude Code and& Software Engineering with AI Agents.md  jw_py_instructions.md
claude-code-expense-tracker/: .gitignore
claude-code-expense-tracker/expense-tracker-nextjs/: README.md  package-lock.json  package.json
claude-code-expense-tracker/expense-tracker-nextjs/src/app/: layout.tsx  page.tsx
claude-code-expense-tracker/expense-tracker-nextjs/src/app/add/: page.tsx
claude-code-expense-tracker/expense-tracker-nextjs/src/app/analytics/: page.tsx
claude-code-expense-tracker/expense-tracker-nextjs/src/app/expenses/: page.tsx
claude-code-expense-tracker/expense-tracker-nextjs/src/components/: ExpenseForm.tsx  ExpenseList.tsx  Modal.tsx  Navigation.tsx  RecentExpenses.tsx  SpendingChart.tsx  SummaryCards.tsx
claude-code-expense-tracker/expense-tracker-nextjs/src/types/: expense.ts
claude-code-expense-tracker/expense-tracker-python/: README.md  api.py  expenses.json  main.py  models.py  pyproject.toml  requirements.txt  run.py  run_with_venv.py  setup.sh  storage.py
nicegui_fastapi_pshare/: .gitignore  main.py  pyproject.toml
