[project]
name = "expense-tracker"
version = "1.0.0"
description = "A modern expense tracking web application"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "nicegui>=1.4.21",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2",
    "requests>=2.28.0",
]

[tool.uv]
dev-dependencies = []